Added mongo projection
