# docs/swagger.json
@@ -7,6 +7,44 @@
         "version": "1.0"
     },
     "paths": {
+        "/patients": {
+            "get": {
+                "description": "Get all patients.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Patients"
+                ],
+                "summary": "Get patient roster",
+                "responses": {
+                    "200": {
+                        "description": "All patients",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Patient"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/HttpError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/HttpError"
+                        }
+                    }
+                }
+            }
+        },
         "/patients/admit": {
             "post": {
                 "description": "admits a new patient.",
@@ -41,13 +79,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/HTTPError"
+                            "$ref": "#/definitions/HttpError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/HTTPError"
+                            "$ref": "#/definitions/HttpError"
                         }
                     }
                 }
@@ -91,13 +129,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/HTTPError"
+                            "$ref": "#/definitions/HttpError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/HTTPError"
+                            "$ref": "#/definitions/HttpError"
                         }
                     }
                 }
@@ -141,13 +179,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/HTTPError"
+                            "$ref": "#/definitions/HttpError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/HTTPError"
+                            "$ref": "#/definitions/HttpError"
                         }
                     }
                 }
@@ -186,13 +224,36 @@
                 }
             }
         },
-        "HTTPError": {
+        "HttpError": {
             "type": "object",
             "properties": {
                 "code": {
                     "type": "integer"
                 },
                 "error": {}
+            }
+        },
+        "Patient": {
+            "type": "object",
+            "properties": {
+                "age": {
+                    "type": "integer"
+                },
+                "discharge_note": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "ward_number": {
+                    "type": "string"
+                }
             }
         },
         "TransferPatientRequest": {
